ribbit/tests/ui/overflow_implicit.stderr
error: Field requires 64 bits at offset 32, but only 32 are available
 --> tests/ui/overflow_implicit.rs:4:5
  |
4 |     b: u64,
  |     ^
